# agentmail

./: .gitignore  Cargo.toml  DESKTOP_AI_MAIL_CLIENT_PLAN.md  README.md  package.json  pnpm-lock.yaml
.github/scripts/: validate-pages.mjs
.github/workflows/: pages.yml  windows-build.yml
crates/ai-remote/: Cargo.toml
crates/ai-remote/src/: lib.rs
crates/app-api/: Cargo.toml
crates/app-api/src/: lib.rs
crates/mail-core/: Cargo.toml
crates/mail-core/src/: lib.rs
crates/mail-protocol/: Cargo.toml
crates/mail-protocol/src/: lib.rs
crates/mail-store/: Cargo.toml
crates/mail-store/src/: lib.rs
crates/secret-store/: Cargo.toml
crates/secret-store/src/: lib.rs
docs/: DECISIONS.md  DESKTOP_AI_MAIL_CLIENT_PLAN.md  NEXT_STEPS.md  PROJECT_STATUS.md  REAL_MAIL_ACCEPTANCE.md
docs/pages/: index.html  styles.css
docs/superpowers/plans/: 2026-04-25-ai-mail-mvp.md  2026-04-28-direct-actions-console-cleanup.md  2026-04-28-lean-decoupling-refactor.md  2026-04-28-qq-dynamic-idle-sync.md  2026-04-28-session-activity-log.md  2026-04-29-consistency-sync.md  2026-05-07-gmail-oauth-review-fixes.md  2026-05-07-mail-list-actions.md  2026-05-08-mime-browsing-foundation.md  2026-05-12-message-reading-layout.md
docs/superpowers/specs/: 2026-04-25-ai-mail-mvp-design.md  2026-04-28-direct-actions-console-cleanup-design.md  2026-04-28-lean-decoupling-refactor-design.md  2026-04-28-qq-dynamic-idle-sync-design.md  2026-04-29-consistency-sync-design.md  2026-05-07-gmail-oauth-review-fixes-design.md  2026-05-08-mime-browsing-foundation-design.md  2026-05-12-message-reading-layout-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: idle_watchers.rs  main.rs  sync_events.rs  sync_service.rs  watchers.rs
ui/: index.html  vite.config.ts
ui/src/: App.test.ts  App.tsx  api.test.ts  api.ts
ui/src/data/: demoBackend.ts
ui/src/lib/: activityLog.ts  format.ts  mailActions.ts  mimeHtml.test.ts  mimeHtml.ts  storage.ts  syncFlows.ts  syncUi.ts
ui/src/styles/: app.css
