[workspace]
members = [
  "crates/mail-core",
  "crates/mail-store",
  "crates/secret-store",
  "crates/mail-protocol",
  "crates/app-api",
  "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = ""
rust-version = "1.80"

[workspace.dependencies]
async-trait = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
