[package]
name = "mail-store"
version = "0.1.0"
edition.workspace = true

[dependencies]
mail-core = { path = "../mail-core" }
parking_lot.workspace = true
rusqlite = { version = "0.33", features = ["bundled"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
